--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
     "gsap": "https://esm.sh/gsap@^3.14.2",
-    "pixi.js": "https://esm.sh/pixi.js@7.4.2",
-    "@google/genai": "https://esm.sh/@google/genai@^1.41.0"
+    "pixi.js": "https://esm.sh/pixi.js@7.4.2"
   }
 }
 </script>
