--- a/index.html
+++ b/index.html
@@ -6,25 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poker Card Dealer</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- GSAP for animations (Vite will bundle local gsap) -->
+    <!-- GSAP for animations -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/",
-    "pixi.js": "https://esm.sh/pixi.js@^8.16.0",
+    "react": "https://esm.sh/react@^19.2.4",
     "gsap": "https://esm.sh/gsap@^3.14.2",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4"
+    "pixi.js": "https://esm.sh/pixi.js@7.4.2"
   }
 }
 </script>
 </head>
 <body class="bg-gray-900 text-white overflow-hidden">
     <div id="root"></div>
-    <!-- Vite entry point -->
-    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
