--- a/index.html
+++ b/index.html
@@ -1,26 +1,13 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Poker Card Dealer</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- GSAP for animations -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-<script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "gsap": "https://esm.sh/gsap@^3.14.2",
-    "pixi.js": "https://esm.sh/pixi.js@7.4.2"
-  }
-}
-</script>
-</head>
-<body class="bg-gray-900 text-white overflow-hidden">
+  </head>
+  <body class="bg-gray-900 text-white overflow-hidden">
     <div id="root"></div>
-</body>
+    <script type="module" src="/index.tsx"></script>
+  </body>
 </html>
