--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Professional poker card dealer with audio announcements in English and Spanish"
+    />
+    <meta name="theme-color" content="#10b981" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
+    <meta name="apple-mobile-web-app-title" content="Card Dealer" />
+    <link rel="apple-touch-icon" href="/icon-192.png" />
     <title>Poker Card Dealer</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
