fix: correct meta tag for mobile web app capability and update card texture loading logic

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="Professional poker card dealer with audio announcements in English and Spanish"
     />
     <meta name="theme-color" content="#10b981" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
     <meta
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
